<resources>
  <string name="app_name">Geo</string>
  
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  
  <string name="welcome">Welcome to</string>
  <string name="geo">Geo</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="signup">Sign Up</string>
  <string name="home">Home</string>
  <string name="main">Main</string>
  <string name="go_back">Return</string>
  
  <string name="enter">Enter</string>
  <string name="add">Add</string>
  <string name="update">Update</string>
  <string name="register">Register</string>
  <string name="disconnect">Disconnect Account</string>
  <string name="delete">Delete</string>
  <string name="delete_selected">Delete Selected</string>
  <string name="current_location">Set to current location</string>
  
  <string name="recentlyViewedEmptyMessage">No Caches found.</string>
  
  <string name="searchCacheHint">Enter Cache Name</string>
  <string name="searchCacheTypePrompt">Type of Cache</string>
  <string name="searchCacheResultsLbl">Search Results</string>
  
  <string name="menu">Geo Menu</string>
  <string name="search">Search</string>
  <string name="map">Map</string>
  <string name="cache_list">Cache List</string>
  <string name="my_cache">My Cache</string>
  <string name="favourites">My Favourites</string>
  <string name="edit_cache">Edit Cache</string>
  <string name="cache_info">Cache Info</string>
  <string name="add_cache">Add Cache</string>
  <string name="mail">Mail</string>
  <string name="settings">Settings</string>
  <string name="take_photo">Take a Photo</string>
  <string name="share">Share</string>
  <string name="communicate_locate">Communicate &amp; Locate</string>
  
  <string name="name">Name</string>
  <string name="firstName">First Name</string>
  <string name="lastName">Last Name</string>
  
  <string name="description">Description</string>
  <string name="location">Location</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  
  <string name="send_to">Send to</string>
  <string name="subject">Subject</string>
  <string name="message">Message</string>
  <string name="send">Send</string>
  
  <string name="defaultName">Name</string>
  <string name="defaultLocation">Location</string>
  
  <string name="info">Info</string>
  <string name="version">Version 1.0</string>
  <string name="appDesc">Geo allows users to take part in an activity called Geocaching. It is a form of Orienteering that is managed solely by the players themselves.</string>
  <string name="appMoreInfo">For more information about Geo please wait for our website thats coming soon!</string>
  
  <string name="title_map">Map</string>
  <string name="google_maps_key">AIzaSyDkWMmlfW_WEA7JpmqAdUBhoRrcKN_E6Us</string>
</resources>
