<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_full"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cache_list"
            android:icon="@drawable/list"
            android:title="@string/cache_list" />
        <item
            android:id="@+id/nav_my_cache"
            android:icon="@drawable/locations_white"
            android:title="@string/my_cache" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_cache" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/mail"
            android:title="@string/mail" />
    </group>

</menu>
