<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        android:clickable="true"
        android:onClick="mapButtonPressed"
        android:orientation="vertical"
        android:gravity="center_vertical|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center|top"
            android:src="@drawable/location"
            android:contentDescription="@string/map"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center|bottom"
            android:text="@string/map"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenDark"/>
    </LinearLayout>

    <Button
        android:id="@+id/cachelist"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/cache_list"
        android:gravity="center|bottom"
        android:paddingBottom="10dp"
        android:onClick="cacheListButtonPressed"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addcache"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        android:gravity="center|bottom"
        android:onClick="addCacheButtonPressed"
        android:paddingBottom="10dp"
        android:text="@string/add_cache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cachelist" />

    <Button
        android:id="@+id/mycache"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        android:gravity="center|bottom"
        android:onClick="myCacheButtonPressed"
        android:paddingBottom="10dp"
        android:text="@string/my_cache"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/mail"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        android:gravity="center|bottom"
        android:onClick="mailButtonPressed"
        android:paddingBottom="10dp"
        android:text="@string/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mycache" />

    <Button
        android:id="@+id/mainsettings"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        android:gravity="center|bottom"
        android:onClick="settingsButtonPressed"
        android:paddingBottom="10dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcache" />

</android.support.constraint.ConstraintLayout>