<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.geo.fragments.SearchFragment">
  
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="486dp"
      android:gravity="center" >
    
    <EditText
        android:id="@+id/searchCacheNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/searchCacheHint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
      
      <requestFocus />
    </EditText>
    
    <Spinner
        android:id="@+id/searchCacheTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/searchCacheTypePrompt"
        android:layout_below="@+id/searchCacheNameEditText"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp" />
    
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/cache_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recentAddedBarTextView"
        android:layout_alignParentBottom="true">
      
      <ListView
          android:id="@+id/searchCacheList"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="right|bottom">
      </ListView>
    
    </android.support.v4.widget.SwipeRefreshLayout>
    
    <TextView
        android:background="@color/colorGreenDark"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:id="@+id/recentAddedBarTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchCacheResultsLbl"
        android:layout_gravity="center"
        android:layout_below="@+id/searchCacheTypeSpinner"
        android:layout_alignParentStart="true" />
    
    <TextView
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recentlyViewedEmptyMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="157dp" />
  
  </RelativeLayout>
</FrameLayout>