<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  
  <TextView
      android:id="@+id/editCacheTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="32dp"
      android:text="@string/edit_cache"
      android:textAppearance="@android:style/TextAppearance.Large"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  
  <ImageView
      android:id="@+id/editCacheStar"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_alignParentStart="true"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="16dp"
      android:contentDescription="fav"
      android:gravity="center_vertical"
      android:onClick="toggle"
      android:src="@drawable/star_green_empty"
      app:layout_constraintHorizontal_bias="0.505"
      app:layout_constraintLeft_toRightOf="@+id/editCacheTitle"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="HardcodedText"/>
  
  <TextView
      android:id="@+id/editCacheNameTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/name"
      app:layout_constraintLeft_toLeftOf="@+id/editCacheName"
      app:layout_constraintTop_toBottomOf="@+id/editCacheTitle"/>
  
  <EditText
      android:id="@+id/editCacheName"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="2dp"
      android:background="@drawable/background"
      android:ems="10"
      android:hint="@string/name"
      android:paddingEnd="5dp"
      android:paddingStart="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editCacheNameTitle"/>
  
  <TextView
      android:id="@+id/editCacheDescriptionTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/description"
      app:layout_constraintLeft_toLeftOf="@+id/editCacheDescription"
      app:layout_constraintTop_toBottomOf="@+id/editCacheName"/>
  
  <EditText
      android:id="@+id/editCacheDescription"
      android:layout_width="215dp"
      android:layout_height="75dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="2dp"
      android:background="@drawable/background"
      android:ems="10"
      android:gravity="top"
      android:hint="@string/description"
      android:inputType="textMultiLine"
      android:maxLength="140"
      android:paddingEnd="5dp"
      android:paddingStart="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editCacheDescriptionTitle"/>
  
  
  <Button
      android:id="@+id/editCacheButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginStart="32dp"
      android:background="@drawable/green_button"
      android:onClick="updateCacheButtonPressed"
      android:text="@string/update"
      android:textColor="@color/colorWhite"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"/>
  
  <Button
      android:id="@+id/deleteCacheButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/red_button"
      android:onClick="deleteCacheButtonPressed"
      android:text="@string/delete"
      android:textColor="@color/colorWhite"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"/>
  
  <fragment
      android:id="@+id/map"
      android:name="app.geo.fragments.MapsFragment"
      android:layout_width="306dp"
      android:layout_height="136dp"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toTopOf="@+id/editCacheButton"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editCacheDescription"/>

</android.support.constraint.ConstraintLayout>